# ai-linter

./: .gitignore  README.md  pyproject.toml  requirements.txt
ai_linter/cli/: __main__.py  command.py  register_commands.py  settings.py  version.py
ai_linter/cli/commands/: __init__.py  init.py  run.py
ai_linter/core/linter/: __init__.py  linter.py
ai_linter/core/linter/adapters/: langchain.py
ai_linter/core/linter/ai_engine/: __init__.py  lint_engine.py
ai_linter/core/linter/code_search/: __init__.py  base.py  python_code_search.py
ai_linter/core/linter/lint_engine/: __init__.py  base.py  openai.py
ai_linter/core/linter/prompts/: base.py  group_rules_by_target.py  rules_classification.py
ai_linter/core/linter/strategies/: naming_convention.py  rules_classification.py
ai_linter/core/models/: __init__.py  repository.py
ai_linter/core/storage/: __init__.py  configuration_storage.py  repository_storage.py
ai_linter/core/utils/: __init__.py  list_tools.py  not_implemented_decorator.py  runner.py
apps/cli/: __main__.py  command.py  config.py  register_commands.py  version.py
apps/cli/commands/: init.py  run.py
core/common/ai_engine/: lint_engine.py
core/common/models/: repository.py
core/common/storage/: configuration_storage.py  repository_storage.py
core/linter/: linter.py
core/linter/ai_engine/: lint_engine.py
core/linter/ai_engine/prompts/: __init__.py  naming_convention_parse.py  naming_convention_violation.py
core/utils/: list_tools.py  runner.py
scripts/tree-sitter/: compile.py
(+10 files in other folders)
